Load converted foreign currency with transaction
